For more detailed instructions on filling in the ChangeLog form, see 
`/fi/doc/procedures/changelogs.txt'.
*******************************************************************************
<version for this commit> (in version.mak)

<standard changelog date stamp>
	* <changes go here...>

******************************************************************************
post-6.2 release changes: 

2003-08-07  Kevin Layer  <layer@crikey>

	* fi-keys.el: fix minor bug with keymap init
	* fi-xemacs.el: implement fi:menu-bar-single-item on xemacs

2003-08-05  Kevin Layer  <layer@crikey>
2.4.0

    for rfe5611: improve menus; follow major mode conventions, and
	* fi-basic-lep.el: changes for new menu code
	* fi-compile.el: compile new file (fi-emasc21)
	* (NEW) fi-emasc21.el: new menu code
	* fi-keys.el: massive keybinding code reorg
	- fi:define-global-lisp-mode-bindings is history
	- new variable fi:extended-keybindings
	- new variable fi:menu-bar-single-item
	* fi-modes.el,
	* fi-rlogin.el,
	* fi-shell.el,
	* fi-su.el,
	* fi-telnet.el: support for keybinding reorg
	* fi-site-init.el: new file, fi-emacs21
	* fi-vers.el: update
    for rfe5529: C-c *
	* fi-lep.el: add fi:pop-definition-mark

2003-07-03  Kevin Layer  <layer@crikey>

	* fi-dmode.el: make RET and C-c. goto definitions, too

2003-03-26  Kevin Layer  <layer@crikey>

	* fi-basic-lep.el (fi::make-connection-to-lisp): bug13111: hide
	  *LEP...* buffers

2003-03-24    <layer@HOBART>

	* fi-site-init.el: <unknown spr#>: handle `cywgin32' system-type

2003-01-28  Kevin Layer  <layer@crikey>

	* fi-indent.el: bug13001: damn, just missed bug 13,000!  Anyway,
	  indent while and until properly
	* fi-subproc.el: bug13001: damn, just missed bug 13,000!  Anyway,
	  fix bug whereby first completion in a shell buffer would get "No
	  marker" error.

2002-12-12  Kevin Layer  <layer@crikey>

	* fi-emacs19.el (fi::lisp-font-lock-keywords): bug12862: fix order
	of regexp parts for better font-locking
